[tool.poetry]
name = "inventory"
version = "0.1.0"
description = ""
authors = []
readme = "readme.md"
packages = [{include = "inventory"}]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = {extras = ["job-queue"], version = "^20.2"}
peewee = "^3.16.0"
pydantic = "^1.10.7"
dependency-injector = "^4.41.0"
loguru = "^0.6.0"
loguru-logging-intercept = "^0.1.1"
aenum = "^3.1.12"
psycopg2-binary = "^2.9.5"
nest-asyncio = "^1.5.6"
notion-client = "^2.0.0"
s3fs = "^2023.3.0"
s3-parse-url = "^0.3.3"

[tool.poetry.group.dev.dependencies]
peewee-migrations = "^0.3.32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.flakeheaven]
exclude = ["migrations/*"]
max_line_length = 88
