[tool.poetry]
name = "inventory"
version = "0.1.0"
description = ""
authors = []
readme = "readme.md"
packages = [{include = "inventory"}]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = {extras = ["job-queue"], version = "^20.2"}
peewee = "^3.16.0"
pydantic = "^1.10.7"
dependency-injector = "^4.41.0"
loguru = "^0.6.0"
loguru-logging-intercept = "^0.1.1"
aenum = "^3.1.12"
psycopg2-binary = "^2.9.5"
nest-asyncio = "^1.5.6"
notion-client = "^2.0.0"
s3fs = "^2023.3.0"
s3-parse-url = "^0.3.3"

[tool.poetry.group.dev.dependencies]
peewee-migrations = "^0.3.32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.flakeheaven]
exclude = ["migrations/*"]
max_line_length = 88

[tool.poe.tasks.user-add]
envfile = ".env"
script = "cli:useradd"
help = "Add a new user to the database, granting them bot access"

    [[tool.poe.tasks.user-add.args]]
    name = "id"
    type = "integer"
    help = "Telegram user ID"
    options = ["--id", "-i"]
    required = true

    [[tool.poe.tasks.user-add.args]]
    name = "full_name"
    help = "User's romanized surname with initials passed as string, e.g. \"Simagin D. A.\""
    type = "string"
    options = ["--full-name", "-n"]
    required = true

    [[tool.poe.tasks.user-add.args]]
    name = "is_admin"
    help = "Determines if the user has admin level access [default:false]"
    type = "boolean"
    default = false
    options = ["--is-admin", "-a"]


[tool.poe.tasks.user-del]

envfile = ".env"
script = "cli:userdel"
help = "Delete a user by id, revoking their bot access rights"

    [[tool.poe.tasks.user-del.args]]
    name = "id"
    help = "Telegram ID of the user to be deleted"
    type = "integer"
    options = ["--id", "-i"]
    required = true

[tool.poe.tasks.user-edit]

envfile = ".env"
script ="cli:useredit"
help = "Edit a user in the database"

    [[tool.poe.tasks.user-edit.args]]
    name = "id"
    help = "Telegram id of the edited user without the @"
    type = "integer"
    options = ["--id", "-i"]
    required = true

    [[tool.poe.tasks.user-edit.args]]
    name = "new_full_name"
    help = "User's romanized surname with initials passed as string, e.g. \"Simagin D. A.\""
    type = "string"
    options = ["--full-name", "-n"]

    [[tool.poe.tasks.user-edit.args]]

    name = "is_admin"
    help = "Determines if the user has admin level access, omit to revoke admin access"
    options = ["--is-admin", "-a"]
    type = "boolean"
    default = false

[tool.poe.tasks.user-list]

envfile = ".env"
script = "cli:userlist"
help = "List all authorized users from database [default: username & permission level]"

    [[tool.poe.tasks.user-list.args]]
    name = "is_verbose"
    help = "Output all database rows"
    type = "boolean"
    default = false
    options = ["--verbose", "-v"]
